<resources>
    <string name="app_name">EuropCar</string>
    <string name="titre_app">EuropCar Locations Services</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="no_account">No account ? </string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_have_an_account">You have an account ? </string>
    <string name="update_your_settings">Update your settings</string>
    <string name="company_name">Company Name</string>
    <string name="company_number">Company Number</string>
    <string name="street">Street</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="security_token">Security Token</string>
</resources>
